--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Django==2.1.15
+asgiref==3.8.1
+Django==4.2.20
 gunicorn==23.0.0
 packaging==24.2
 pillow==11.1.0
 pytz==2025.1
+sqlparse==0.5.3
+typing_extensions==4.12.2
