--- a/buildspec_sonarcloud.yml
+++ b/buildspec_sonarcloud.yml
@@ -15,7 +15,7 @@ phases:
       - pip install --upgrade pip
       - pip install -r requirements.txt
       # Install SonarScanner for Python
-      - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip
+      - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
       - unzip sonar-scanner-cli-4.7.0.2747-linux.zip
       - export PATH=$PATH:$PWD/sonar-scanner-4.7.0.2747-linux/bin
 
@@ -25,7 +25,10 @@ phases:
 
   build:
     commands:
-      # Run Sonar Scanner
+      - echo $Project
+      - echo $Organization
+      - echo $HOST
+      - echo $LOGIN
       - sonar-scanner \
           -Dsonar.projectKey=$Project \
           -Dsonar.organization=$Organization \
