--- a/buildspec_sonarcloud.yml
+++ b/buildspec_sonarcloud.yml
@@ -25,13 +25,14 @@ phases:
 
   build:
     commands:
-      - echo $Project
-      - echo $Organization
-      - echo $HOST
-      - echo $LOGIN
+      # Debugging step: check the environment variables
+      - echo "Project: $Project"
+      - echo "Organization: $Organization"
+      - echo "Host URL: $HOST"
+      - echo "Login Token: $LOGIN"
+      # Run SonarScanner without the organization flag (if using SonarQube)
       - sonar-scanner \
           -Dsonar.projectKey=$Project \
-          -Dsonar.organization=$Organization \
           -Dsonar.sources=. \
           -Dsonar.host.url=$HOST \
           -Dsonar.login=$LOGIN
