--- a/buildspec_sonarcloud.yml
+++ b/buildspec_sonarcloud.yml
@@ -11,31 +11,38 @@ phases:
   install:
     runtime-versions:
       python: 3.11
+      java: corretto11
     commands:
       - pip install --upgrade pip
       - pip install -r requirements.txt
-      # Install SonarScanner for Python
+      # Install dependencies
+      - apt-get update -y && apt-get install -y jq unzip
+      # Install SonarScanner
       - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
       - unzip sonar-scanner-cli-4.8.0.2856-linux.zip
+      - chmod +x sonar-scanner-4.8.0.2856-linux/bin/*
       - export PATH=$PATH:$PWD/sonar-scanner-4.8.0.2856-linux/bin
 
   pre_build:
     commands:
       - python --version
+      - java -version
+      - sonar-scanner --version
 
   build:
     commands:
-      - echo "Project: $Project"
-      - echo "Organization: $Organization"
-      - echo "Host URL: $HOST"
-      - echo "Login Token: $LOGIN"
+      - echo "Starting SonarCloud analysis..."
       - sonar-scanner \
           -Dsonar.projectKey=$Project \
+          -Dsonar.organization=$Organization \
           -Dsonar.sources=. \
           -Dsonar.host.url=$HOST \
-          -Dsonar.login=$LOGIN
-      - sleep 5
-      - curl "$HOST/api/qualitygates/project_status?projectKey=$Project" > result.json
+          -Dsonar.login=$LOGIN \
+          -Dsonar.python.version=3.11
+      - echo "Waiting for analysis to complete..."
+      - sleep 10
+      - echo "Checking Quality Gate status..."
+      - curl -u "$LOGIN:" "$HOST/api/qualitygates/project_status?projectKey=$Project" > result.json
       - cat result.json
       - |
         if [ "$(jq -r '.projectStatus.status' result.json)" = "ERROR" ]; then
