--- a/buildspec_sonarcloud.yml
+++ b/buildspec_sonarcloud.yml
@@ -13,10 +13,15 @@ phases:
       python: 3.11
       java: corretto11
     commands:
+      # Install system dependencies (Amazon Linux uses yum)
+      - yum update -y
+      - yum install -y jq unzip
+      # Set up Python virtual environment
+      - python -m venv venv
+      - source venv/bin/activate
+      # Install Python dependencies
       - pip install --upgrade pip
       - pip install -r requirements.txt
-      # Install dependencies
-      - apt-get update -y && apt-get install -y jq unzip
       # Install SonarScanner
       - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
       - unzip sonar-scanner-cli-4.8.0.2856-linux.zip
