--- a/buildspec_sonarcloud.yml
+++ b/buildspec_sonarcloud.yml
@@ -13,16 +13,12 @@ phases:
       python: 3.11
       java: corretto11
     commands:
-      # Install system dependencies (Amazon Linux uses yum)
       - yum update -y
       - yum install -y jq unzip
-      # Set up Python virtual environment
       - python -m venv venv
       - source venv/bin/activate
-      # Install Python dependencies
       - pip install --upgrade pip
       - pip install -r requirements.txt
-      # Install SonarScanner
       - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
       - unzip sonar-scanner-cli-4.8.0.2856-linux.zip
       - chmod +x sonar-scanner-4.8.0.2856-linux/bin/*
@@ -37,13 +33,14 @@ phases:
   build:
     commands:
       - echo "Starting SonarCloud analysis..."
-      - sonar-scanner \
-          -Dsonar.projectKey=$Project \
-          -Dsonar.organization=$Organization \
-          -Dsonar.sources=. \
-          -Dsonar.host.url=$HOST \
-          -Dsonar.login=$LOGIN \
-          -Dsonar.python.version=3.11
+      - >
+        sonar-scanner
+        -Dsonar.projectKey=$Project
+        -Dsonar.organization=$Organization
+        -Dsonar.sources=.
+        -Dsonar.host.url=$HOST
+        -Dsonar.login=$LOGIN
+        -Dsonar.python.version=3.11
       - echo "Waiting for analysis to complete..."
       - sleep 10
       - echo "Checking Quality Gate status..."
