--- a/buildspec_sonarcloud.yml
+++ b/buildspec_sonarcloud.yml
@@ -33,7 +33,14 @@ phases:
   build:
     commands:
       - echo "Starting SonarCloud analysis..."
-      - sonar-scanner -Dsonar.projectKey=$Project -Dsonar.organization=$Organization -Dsonar.sources=. -Dsonar.host.url=$HOST -Dsonar.login=$LOGIN -Dsonar.python.version=3.11
+      - sonar-scanner
+          -Dsonar.projectKey=$Project
+          -Dsonar.organization=$Organization
+          -Dsonar.sources=.
+          -Dsonar.host.url=$HOST
+          -Dsonar.login=$LOGIN
+          -Dsonar.python.version=3.11
+          -Dsonar.analysis.ci=true
       - echo "Waiting for analysis to complete..."
       - sleep 10
       - echo "Checking Quality Gate status..."
