--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 asgiref==3.8.1
 babel==2.17.0
+coverage==7.8.0
 Django==4.2.20
+exceptiongroup==1.2.2
+Faker==12.0.1
 gunicorn==23.0.0
+iniconfig==2.1.0
+mixer==7.2.2
 packaging==24.2
 pillow==11.1.0
+pluggy==1.5.0
+pytest==8.3.5
+pytest-cov==6.1.0
+pytest-django==4.11.0
+python-dateutil==2.9.0.post0
 pytz==2025.1
+six==1.17.0
 sqlparse==0.5.3
+tomli==2.2.1
 typing_extensions==4.12.2
