--- a/buildspec_test.yml
+++ b/buildspec_test.yml
@@ -3,9 +3,10 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      python: 3.8
+      python: 3.9
     commands:
       - echo "Installing dependencies..."
+      - pip install --upgrade pip
       - pip install -r requirements.txt
       - pip install pytest pytest-django pytest-cov mixer
       
