--- a/buildspec_test.yml
+++ b/buildspec_test.yml
@@ -5,33 +5,20 @@ phases:
     runtime-versions:
       python: 3.9
     commands:
-      - echo "Installing dependencies..."
       - pip install --upgrade pip
       - pip install -r requirements.txt
       - pip install pytest pytest-django pytest-cov mixer
       
   pre_build:
     commands:
-      - echo "Running migrations..."
       - python manage.py migrate
       
   build:
     commands:
-      - echo "Running tests with pytest..."
       - pytest --cov=. --cov-report=xml --junitxml=test-results.xml
       
   post_build:
     commands:
       - echo "Test phase completed"
 
-reports:
-  pytest_reports:
-    files:
-      - 'test-results.xml'
-    base-directory: '$CODEBUILD_SRC_DIR'
-    file-format: 'JUNITXML'
-  coverage_reports:
-    files:
-      - 'coverage.xml'
-    base-directory: '$CODEBUILD_SRC_DIR'
-    file-format: 'COBERTURAXML'
+# Removed the reports section
