--- a/buildspec_sonarcloud.yml
+++ b/buildspec_sonarcloud.yml
@@ -39,10 +39,10 @@ phases:
       - cat result.json
       - |
         if [ "$(jq -r '.projectStatus.status' result.json)" = "ERROR" ]; then
-          echo "❌ Quality Gate failed"
+          echo "Quality Gate failed"
           exit 1
         else
-          echo "✅ Quality Gate passed"
+          echo "Quality Gate passed"
         fi
 
 artifacts:
